# GPyEDS

./: .gitignore  .pre-commit-config.yaml  Makefile  NOTICE.md  README.md  cog.toml  main.py  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependency-checks.yml  python-app.yml  release.yml
GPyEDS/: GPAM.py  mean_centre_normalisation.py  nn.py  spatial_filters.py  utils.py
GPyEDS/EDS2CHEM/: mcmc.py
docs/: gen_ref_pages.py  install.md
docs/Examples/: EDS2CHEM_example.ipynb  QEMSCAN_build_data.ipynb
tests/: GPAM_test.py  filter_test.py  mcmc_test.py  mean_centre_test.py  nn_AE_test.py  utils_test.py
