[project]
name = "gpyeds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gpflow>=2.5.2",
    "gpflux>=0.2.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "tqdm>=4.68.2",
]

[tool.fawltydeps]
deps = ["requirements.txt"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "fawltydeps>=0.20.0",
    "mkdocs-gen-files>=0.6.1",
    "setuptools>=82.0.1",
]
