
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpyeds"
version = "0.1.0"
description = "Python toolbox for the analysis of EDS (or other hyperspectral) data sets using GPs and neural networks autoencoders. "
readme = "README.md"
requires-python = ">=3.12.0, <3.13"
license = "MIT"
dependencies = [
    "absl-py",
    "array-record>=0.4.0",
    "asttokens>=2.4.1",
    "astunparse>=1.6.3",
    "backcall>=0.2.0",
    "cachetools>=5.3.2",
    "certifi>=2023.11.17",
    "cftime>=1.6.2",
    "chardet>=5.2.0",
    "charset-normalizer>=3.3.2",
    "check-shapes>=1.1.1",
    "cloudpickle>=3.0.0",
    "contourpy>=1.1.1",
    "corner>=2.2.1",
    "cycler>=0.12.1",
    "decorator>=5.1.1",
    "deprecat>=2.1.1",
    "deprecated>=1.2.14",
    "dill>=0.3.7",
    "dm-tree>=0.1.8",
    "emcee>=3.1.4",
    "etils>=1.3.0",
    "exceptiongroup>=1.2.1",
    "executing>=2.0.1",
    "flatbuffers>=23.5.26",
    "gast>=0.4.0",
    "gpflow>=2.9.0",
    "gpflux>=0.4.3",
    "idna>=3.6",
    "importlib-metadata>=7.0.1",
    "importlib-resources>=6.1.1",
    "joblib>=1.3.2",
    "keras>=2.13.1",
    "kiwisolver>=1.4.5",
    "lark>=1.1.8",
    "lazy-loader>=0.2",
    "libclang>=16.0.6",
    "matplotlib>=3.7.4",
    "matplotlib-inline>=0.1.6",
    "mkdocs-jupyter",
    "mkdocs-toc-md",
    "mkdocstrings",
    "mkdocstrings-python",
    "multipledispatch>=1.0.0",
    "myst-parser",
    "networkx>=3.1",
    "numpy>=1.24.3",
    "opt-einsum>=3.3.0",
    "packaging>=23.2",
    "pandas>=2.0.3",
    "pip>=23.3.1",
    "promise>=2.3",
    "protobuf>=4.25.1",
    "psutil>=5.9.0",
    "pure-eval>=0.2.2",
    "pyparsing>=3.1.1",
    "python-dateutil>=2.8.2",
    "pytz>=2024.1",
    "pyzmq>=25.1.0",
    "requests>=2.31.0",
    "scikit-image>=0.21.0",
    "scikit-learn>=1.3.2",
    "scipy>=1.9.1",
    "shapely>=2.0.2",
    "six>=1.16.0",
    "stack-data>=0.6.2",
    "tabulate>=0.9.0",
    "tensorflow>=2.13.0",
    "termcolor>=2.4.0",
    "threadpoolctl>=3.2.0",
    "tifffile>=2023.7.10",
    "tomli>=2.0.1",
    "tornado>=6.2",
    "tqdm",
    "tzdata>=2024.1",
    "urllib3>=2.1.0",
    "wcwidth>=0.2.12",
    "wrapt>=1.16.0",
    "zipp>=3.17.0",
    "ruff",
    "mypy",
    "pre-commit",
    "python-semantic-release",
    "pytest",
    "pytest-cov",
    "setuptools",
    "mkdocs-material",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501", "E711", "E712", "E741", "F841", "E731", "F401"]

[tool.mypy]
ignore_missing_imports = true
strict = false

[tool.semantic_release]
version_variables = [
    "GPyEDS/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:project.version"
]
upload_to_pypi = false
upload_to_release = true
build_command = "uv build"

[tool.hatch.build.targets.wheel]
packages = ["GPyEDS"]
