[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "gpyeds"
version = "0.1.0"
description = "Python toolbox for the analysis of EDS (or other hyperspectral) data sets using GPs and neural networks autoencoders. "
readme = "README.md"
requires-python = ">=3.12.0, <3.13"
license = "MIT"
dependencies = [
    "emcee>=3.1.4",
    "gpflow>=2.9.0",
    "matplotlib>=3.7.4",
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    "scikit-image>=0.21.0",
    "scikit-learn>=1.3.2",
    "scipy>=1.9.1",
    "tensorflow>=2.13.0",
    "tensorflow-probability<0.25.0",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "corner>=2.2.1",
    "mkdocs-gen-files",
    "mkdocs-jupyter",
    "mkdocs-literate-nav",
    "mkdocs-material",
    "mkdocs-section-index",
    "mkdocs-toc-md",
    "mkdocstrings",
    "mkdocstrings-python",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "python-semantic-release",
    "ruff",
    "setuptools",
    "uv-outdated",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
]
ignore = [
    "E501",
    "E711",
    "E712",
    "E741",
    "F841",
    "E731",
    "F401",
    "E402",
]

[tool.mypy]
ignore_missing_imports = true
strict = true
overrides = [
    { module = "gpflux.*", ignore_errors = true },
    { module = "gpflow.*", ignore_errors = true },
]

[tool.semantic_release]
version_variables = [
    "GPyEDS/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:project.version",
]
upload_to_pypi = false
upload_to_release = true
build_command = "uv build"

[tool.hatch.build.targets.wheel]
packages = [
    "GPyEDS",
]

[tool.deptry]
extend_exclude = [
    "docs/Examples",
    "docs/gen_ref_pages.py",
]
pep621_dev_dependency_groups = [
    "dev",
]

[tool.deptry.package_module_name_map]
scikit-image = [
    "skimage",
]
scikit-learn = [
    "sklearn",
]
